Make the recipe page for tuna casserole

--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+
+    <a href="recipes/casserole.html">Best Tuna Casserole</a>
+
+    
 </body>
 </html>
