Add a new recipe page and edit casserole.html and index.html

--- a/recipes/casserole.html
+++ b/recipes/casserole.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipe</title>
+    <title>Best Tuna Casserole</title>
 </head>
 <body>
     <h1>Best Tuna Casserole</h1>
 
-    <img src="https://www.allrecipes.com/thmb/efrZbK7OkXNkRpyBvpoE3ZH2mG4=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/17219-best-tuna-casserole-DDMFS-4x3-ed4c896c1fdd4732b38db27c0ff6bde3.jpg" height="300" width="300">
+    <img src="https://www.allrecipes.com/thmb/efrZbK7OkXNkRpyBvpoE3ZH2mG4=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/17219-best-tuna-casserole-DDMFS-4x3-ed4c896c1fdd4732b38db27c0ff6bde3.jpg" height="300" width="300" alt="cheesy tuna casserole served on a plate with a cup of water and tuna casserole pan in the background">
 
     <h2>Description</h2>
 
@@ -22,8 +22,8 @@
             <li>2 cups shredded Chedder cheese, divided</li>
             <li>2 (5 ounce) cans tuna, drained</li>
             <li>1 cup frozen green peas</li>
-            <li>0.5 (4.5 ounce) can sliced mushrooms</li>
-            <li>0.25 cup chopped onion</li>
+            <li>1/2 (4.5 ounce) can sliced mushrooms</li>
+            <li>1/4 cup chopped onion</li>
             <li>1 cup crushed potato chips</li>
         </ul>
 
