--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="recipes/casserole.html">Best Tuna Casserole</a>
+    <ul>
+        <li><a href="recipes/casserole.html">Best Tuna Casserole</a></li>
+        <li><a href="recipes/pancakes.html">Good Old-Fashioned Pancakes</a></li>
 
+    </ul>
     
 </body>
 </html>
