Create new recipe page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
         <li><a href="recipes/casserole.html">Best Tuna Casserole</a></li>
         <li><a href="recipes/pancakes.html">Good Old-Fashioned Pancakes</a></li>
-
+        <li><a href="recipes/potato-soup.html">Baked Potato Soup</a></li>
     </ul>
     
 </body>
