--- a/recipes/casserole.html
+++ b/recipes/casserole.html
@@ -19,7 +19,7 @@
         <ul>
             <li>1 (12 ounce) package egg noodles</li>
             <li>2 (10.5 ounce) cans condensed cream of mushroom soup</li>
-            <li>2 cups shredded Chedder cheese, divided</li>
+            <li>2 cups shredded Cheddar cheese, divided</li>
             <li>2 (5 ounce) cans tuna, drained</li>
             <li>1 cup frozen green peas</li>
             <li>1/2 (4.5 ounce) can sliced mushrooms</li>
