Improve recipe pages using class attributes and css selectors

--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/recipes/style.css">
+    <link rel="stylesheet" href="./recipes/style.css">
     <title>Odin Project Assignment</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="odin-recipes">Odin Recipes</h1>
 
-    <ul>
-        <li><a href="recipes/casserole.html">Best Tuna Casserole</a></li>
-        <li><a href="recipes/pancakes.html">Good Old-Fashioned Pancakes</a></li>
-        <li><a href="recipes/potato-soup.html">Baked Potato Soup</a></li>
-    </ul>
+    <div class="link-list">
+        <ul class="list">
+            <li><a href="recipes/casserole.html">Best Tuna Casserole</a></li>
+            <li><a href="recipes/pancakes.html">Good Old-Fashioned Pancakes</a></li>
+            <li><a href="recipes/potato-soup.html">Baked Potato Soup</a></li>
+        </ul>
+    </div>
     
 </body>
 </html>
