--- a/recipes/casserole.html
+++ b/recipes/casserole.html
@@ -7,15 +7,15 @@
     <title>Best Tuna Casserole</title>
 </head>
 <body>
-    <h1>Best Tuna Casserole</h1>
+    <h1 class="heading">Best Tuna Casserole</h1>
 
     <img src="https://www.allrecipes.com/thmb/efrZbK7OkXNkRpyBvpoE3ZH2mG4=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/17219-best-tuna-casserole-DDMFS-4x3-ed4c896c1fdd4732b38db27c0ff6bde3.jpg" height="300" width="300" alt="cheesy tuna casserole served on a plate with a cup of water and tuna casserole pan in the background">
 
-    <h2>Description</h2>
+    <h2 class="heading">Description</h2>
 
     <p>This is a tuna casserole even a picky family will love! The potato chips give the casserole a crunchy crust. Try serving with a side of roasted Brussel sprouts.</p>
 
-    <h2>Ingredients</h2>
+    <h2 class="heading">Ingredients</h2>
 
         <ul>
             <li>1 (12 ounce) package egg noodles</li>
@@ -28,7 +28,7 @@
             <li>1 cup crushed potato chips</li>
         </ul>
 
-    <h2>Steps</h2>
+    <h2 class="heading">Steps</h2>
 
         <ol>
             <li>Gather all the ingredients.</li>
