--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -7,15 +7,15 @@
     <title>Good Old-Fashioned Pancakes</title>
 </head>
 <body>
-    <h1>Good Old-Fashioned Pancakes</h1>
+    <h1 class="heading">Good Old-Fashioned Pancakes</h1>
 
     <img src="https://www.allrecipes.com/thmb/kvvETNZfOtAptH69gUsK6FaKRKA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/21014-Good-old-Fashioned-Pancakes-mfs_001-1fa26bcdedc345f182537d95b6cf92d8.jpg" height="300" width="300" alt="four delicious pancakes stacked on top of eachother drizzled with syrup and butter on top">
 
-    <h2>Description</h2>
+    <h2 class="heading">Description</h2>
 
     <p>Savor this quick and easy pancake recipe, featuring light, fluffy stacks that promise a taste of morning perfection. Customize with your favorite syrups, fruit, or toppings. Enjoy breakfast bliss with every bite!</p>
 
-    <h2>Ingredients</h2>
+    <h2 class="heading">Ingredients</h2>
 
         <ul>
             <li>1 1/2 cups all-purpose flour</li>
@@ -27,7 +27,7 @@
             <li>1 egg</li>
         </ul>
 
-    <h2>Steps</h2>
+    <h2 class="heading">Steps</h2>
 
         <ol>
             <li>Sift flour, baking powder, sugar, and salt together in a large bowl. Make a well in the center and add milk, melted butter, and egg; mix until smooth.</li>
