--- a/recipes/potato-soup.html
+++ b/recipes/potato-soup.html
@@ -7,14 +7,14 @@
     <title>Baked Potato Soup</title>
 </head>
 <body>
-    <h1>Baked Potato Soup</h1>
+    <h1 class="heading">Baked Potato Soup</h1>
 
     <img src="https://www.allrecipes.com/thmb/P2-YoSkmuQJc4cj9VY7kwdOr8HM=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/RM-12997-baked-potato-soup-ddmfs-3x4-2754-9c082a6703ef4a55bdcb9e6368f180e9.jpg" height="300" width="300" alt="a bowl of baked potato soup topped with bacon, cheese, and sour cream">
 
-    <h2>Description</h2>
+    <h2 class="heading">Description</h2>
         <p>Baked potato soup is the perfect hearty, filling, stick-to-your-bones dinner for a cold winter's night. This baked potato soup recipe will quickly become a family favorite.</p>
     
-    <h2>Ingredients</h2>
+    <h2 class="heading">Ingredients</h2>
         <ul>
             <li>12 slices of bacon</li>
             <li>2/3 cup butter</li>
@@ -28,7 +28,7 @@
             <li>1 teaspoon ground black pepper</li>
         </ul>
 
-    <h2>Steps</h2>
+    <h2 class="heading">Steps</h2>
         <ol>
             <li>Gather all the ingredients.</li>
             <li>Place bacon in a large skillet and cook over medium-high heat, turning occasionally, until evenly browned, about 8 to 10 minutes. Drain bacon slices on paper towels; crumble and set aside.</li>
